--- a/index.html
+++ b/index.html
@@ -492,12 +492,13 @@
             </p>
           </div>
         </div>
-        <button class="news-container-button">
-          <span class="transition"></span>
-          <span class="gradient"></span>
-          <span class="label">Batafsil</span>
-        </button>
-
+        <a href="./pages/news/news.html">
+          <button class="news-container-button">
+            <span class="transition"></span>
+            <span class="gradient"></span>
+            <span class="label">Batafsil</span>
+          </button>
+        </a>
       </div>
     </div>
   </div>
@@ -550,125 +551,121 @@
       </div>
     </div>
   </div>
-<!-- media section end -->
+  <!-- media section end -->
 
 
-<!-- place section start -->
+  <!-- place section start -->
 
-<div class="places-sections">
-  <div class="container">
-    <div class="places-section-item">
-      <div class="places-section-item-title">
-        <h4>Qo'qon shaxrining diqqatga sazovor joylari</h4>
-      </div>
-      <div class="places-cards">
-        <div class="places-nft">
-          <div class="places-main">
-            <img class="places-tokenImage" src="assets/photos/places/photo1.jpg" alt="NFT" />
-            <h2>Dahmai shohon</h2>
-            <a href="pages/places1.html">
-              <button class="button2">Batafsil</button>
-            </a>
-            <hr />
-            <div class="places-creator">
-              <div class="places-wrapper">
-                <img src="assets/background/Untitled.png" alt="Creator" />
+  <div class="places-sections">
+    <div class="container">
+      <div class="places-section-item">
+        <div class="places-section-item-title">
+          <h4>Qo'qon shaxrining diqqatga sazovor joylari</h4>
+        </div>
+        <div class="places-cards">
+          <div class="places-nft">
+            <div class="places-main">
+              <img class="places-tokenImage" src="assets/photos/places/photo1.jpg" alt="NFT" />
+              <h2>Dahmai shohon</h2>
+              <div class="places-creator">
+                <div class="places-wrapper">
+                  <img src="assets/background/Untitled.png" alt="Creator" />
+                </div>
+                <p><ins>Diqqatga Sazovor Joylar</ins></p>
               </div>
-              <p><ins>Diqqatga Sazovor Joylar</ins></p>
+              <a href="pages/place1.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
           </div>
-        </div>
 
-        <div class="places-nft">
-          <div class="places-main">
-            <img class="places-tokenImage" src="assets/photos/places/photo2.jpg" alt="NFT" />
-            <h2>Jome' masjid</h2>
-            <a href="pages/place2.html">
-              <button class="button2">Batafsil</button>
-            </a>
-            <hr />
-            <div class="places-creator">
-              <div class="places-wrapper">
-                <img src="assets/background/Untitled.png" alt="Creator" />
+          <div class="places-nft">
+            <div class="places-main">
+              <img class="places-tokenImage" src="assets/photos/places/photo2.jpg" alt="NFT" />
+              <h2>Jome' masjid</h2>
+              <div class="places-creator">
+                <div class="places-wrapper">
+                  <img src="assets/background/Untitled.png" alt="Creator" />
+                </div>
+                <p><ins>Diqqatga Sazovor Joylar</ins></p>
               </div>
-              <p><ins>Diqqatga Sazovor Joylar</ins></p>
+              <a href="pages/place2.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
           </div>
-        </div>
 
-        <div class="places-nft">
-          <div class="places-main">
-            <img class="places-tokenImage" src="assets/photos/places/photo3.jpg" alt="NFT" />
-            <h2>Xudoyorxon o'rdasi</h2>
-            <a href="pages/place3.html">
-              <button class="button2">Batafsil</button>
-            </a>
-            <hr />
-            <div class="places-creator">
-              <div class="places-wrapper">
-                <img src="assets/background/Untitled.png" alt="Creator" />
+          <div class="places-nft">
+            <div class="places-main">
+              <img class="places-tokenImage" src="assets/photos/places/photo3.jpg" alt="NFT" />
+              <h2>Xudoyorxon o'rdasi</h2>
+              <div class="places-creator">
+                <div class="places-wrapper">
+                  <img src="assets/background/Untitled.png" alt="Creator" />
+                </div>
+                <p><ins>Diqqatga Sazovor Joylar</ins></p>
               </div>
-              <p><ins>Diqqatga Sazovor Joylar</ins></p>
+              <a href="pages/place3.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
           </div>
-        </div>
 
-        <div class="places-nft">
-          <div class="places-main">
-            <img class="places-tokenImage" src="assets/photos/places/photo4.jpg" alt="NFT" />
-            <h2>Norbo'tabiy madrasasi</h2>
-            <a href="pages/place4.html">
-              <button class="button2">Batafsil</button>
-            </a>
-            <hr />
-            <div class="places-creator">
-              <div class="places-wrapper">
-                <img src="assets/background/Untitled.png" alt="Creator" />
+          <div class="places-nft">
+            <div class="places-main">
+              <img class="places-tokenImage" src="assets/photos/places/photo4.jpg" alt="NFT" />
+              <h2>Norbo'tabiy madrasasi</h2>
+              <div class="places-creator">
+                <div class="places-wrapper">
+                  <img src="assets/background/Untitled.png" alt="Creator" />
+                </div>
+                <p><ins>Diqqatga Sazovor Joylar</ins> </p>
               </div>
-              <p><ins>Diqqatga Sazovor Joylar</ins> </p>
+              <a href="pages/place4.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
           </div>
-        </div>
 
-        <div class="places-nft">
-          <div class="places-main">
-            <img class="places-tokenImage" src="assets/photos/places/photo5.jpg" alt="NFT" />
-            <h2>Kamol qozi madrasasi</h2>
-            <a href="pages/place5.html">
-              <button class="button2">Batafsil</button>
-            </a>
-            <hr />
-            <div class="places-creator">
-              <div class="places-wrapper">
-                <img src="assets/background/Untitled.png" alt="Creator" />
+          <div class="places-nft">
+            <div class="places-main">
+              <img class="places-tokenImage" src="assets/photos/places/photo5.jpg" alt="NFT" />
+              <h2>Kamol qozi madrasasi</h2>
+
+              <div class="places-creator">
+                <div class="places-wrapper">
+                  <img src="assets/background/Untitled.png" alt="Creator" />
+                </div>
+                <p><ins>Diqqatga Sazovor Joylar</ins> </p>
               </div>
-              <p><ins>Diqqatga Sazovor Joylar</ins> </p>
+              <a href="pages/place5.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
           </div>
-        </div>
 
-        <div class="places-nft">
-          <div class="places-main">
-            <img class="places-tokenImage" src="assets/photos/places/photo6.jpg" alt="NFT" />
-            <h2>Miyon Xazrat madrasasi</h2>
-            <a href="pages/place6.html">
-              <button class="button2">Batafsil</button>
-            </a>
-            <hr />
-            <div class="places-creator">
-              <div class="places-wrapper">
-                <img src="assets/background/Untitled.png" alt="Creator" />
+          <div class="places-nft">
+            <div class="places-main">
+              <img class="places-tokenImage" src="assets/photos/places/photo6.jpg" alt="NFT" />
+              <h2>Miyon Xazrat madrasasi</h2>
+
+              <div class="places-creator">
+                <div class="places-wrapper">
+                  <img src="assets/background/Untitled.png" alt="Creator" />
+                </div>
+                <p><ins>Diqqatga Sazovor Joylar</ins> </p>
               </div>
-              <p><ins>Diqqatga Sazovor Joylar</ins> </p>
+              <a href="pages/place6.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-        <!-- place section end -->
+  <!-- place section end -->
   <!-- Statistics -->
   <div class="statistics">
     <div class="statistics-bg"></div>
@@ -681,27 +678,27 @@
         <div class="statistics-item-box">
           <img src="./assets/photos/statistics/image1.jpg" alt="image" />
           <h5>Turoperator va turagentlar</h5>
-          <span class="statistics_num" data-val="3785"></span>
+          <span class="statistics_num" data-val="1500"></span>
         </div>
         <div class="statistics-item-box">
           <img src="./assets/photos/statistics/image2.jpg" alt="image" />
           <h5>Joylashtirish vositalari</h5>
-          <span class="statistics_num" data-val="2914"></span>
+          <span class="statistics_num" data-val="300"></span>
         </div>
         <div class="statistics-item-box">
           <img src="./assets/photos/statistics/image3.jpg" alt="image" />
           <h5>Chet ellik sayyohlar</h5>
-          <span class="statistics_num" data-val="1964"></span>
+          <span class="statistics_num" data-val="1623"></span>
         </div>
         <div class="statistics-item-box">
           <img src="./assets/photos/statistics/image4.jpg" alt="image" />
           <h5>Mehmon uylari</h5>
-          <span class="statistics_num" data-val="9462"></span>
+          <span class="statistics_num" data-val="167"></span>
         </div>
         <div class="statistics-item-box">
           <img src="./assets/photos/statistics/image5.jpg" alt="image" />
           <h5>Gidlar</h5>
-          <span class="statistics_num" data-val="2157"></span>
+          <span class="statistics_num" data-val="691"></span>
         </div>
       </div>
     </div>
@@ -765,13 +762,15 @@
               <p class="food-description">
                 Qaynoqqina tandirdan uzilgan somsa hohlovchilar uchun
               </p>
-              <hr />
               <div class="food-creator">
                 <div class="food-wrapper">
                   <img src="assets/background/Untitled.png" alt="Creator" />
                 </div>
-                <p><ins>Our national</ins> Foods</p>
+                <p><ins>Our national Foods</ins></p>
               </div>
+              <a href="./pages/food/food1.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
           </div>
 
@@ -785,8 +784,11 @@
                 <div class="food-wrapper">
                   <img src="assets/background/Untitled.png" alt="Creator" />
                 </div>
-                <p><ins>Our national</ins> Foods</p>
+                <p><ins>Our national Foods</ins></p>
               </div>
+              <a href="./pages/food/food2.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
           </div>
 
@@ -800,8 +802,11 @@
                 <div class="food-wrapper">
                   <img src="assets/background/Untitled.png" alt="Creator" />
                 </div>
-                <p><ins>Our national</ins> Foods</p>
+                <p><ins>Our national Foods</ins></p>
               </div>
+              <a href="./pages/food/food3.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
           </div>
 
@@ -819,8 +824,11 @@
                 <div class="food-wrapper">
                   <img src="assets/background/Untitled.png" alt="Creator" />
                 </div>
-                <p><ins>Our national</ins> Foods</p>
+                <p><ins>Our national Foods</ins></p>
               </div>
+              <a href="./pages/food/food4.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
           </div>
 
@@ -834,8 +842,11 @@
                 <div class="food-wrapper">
                   <img src="assets/background/Untitled.png" alt="Creator" />
                 </div>
-                <p><ins>Our national</ins> Foods</p>
+                <p><ins>Our national Foods</ins></p>
               </div>
+              <a href="./pages/food/food5.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
           </div>
 
@@ -851,8 +862,11 @@
                 <div class="food-wrapper">
                   <img src="assets/background/Untitled.png" alt="Creator" />
                 </div>
-                <p><ins>Our national</ins> Foods</p>
+                <p><ins>Our national Foods</ins></p>
               </div>
+              <a href="./pages/food/food6.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
           </div>
         </div>
