--- a/pages/food/food1.html
+++ b/pages/food/food1.html
@@ -8,25 +8,26 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css" />
     <link rel="icon" href="../assets/logo/icon.png">
     <link rel="stylesheet" href="./places.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../page1.css">
 </head>
 
 <body>
     <div class="to-top"><i class="fa-solid fa-chevron-up"></i></div>
     <div class="header">
-        <a href="../index.html" class="header-item">
-            <img src="../assets/logo/Резервная_копия_fer 1.png" alt="" />
+        <a href="../../index.html" class="header-item">
+            <img src="../../assets/logo/Резервная_копия_fer 1.png" alt="" />
             <p class="logo">O‘zbekiston Respublikasi Turizm va madaniy meros vazirligi, Farg‘ona
                 viloyati Turizm va madaniy meros bosh boshqarmasi.</p>
         </a>
         <nav class="navbar">
             <a href="../index.html">Bosh sahifa</a>
-            <a href="./page1.html" class="active">Qo'mita</a>
-            <a href="./page2.html">Qonunchilik</a>
-            <a href="./page3.html">Matbuot xizmati</a>
-            <a href="./page4.html">Xizmatlar</a>
-            <a href="./page5.html">Tadqiqotlar</a>
-            <a href="./page6.html">Imtiyozlar</a>
+            <a href="../page1.html">Qo'mita</a>
+            <a href="../page2.html">Qonunchilik</a>
+            <a href="../page3.html">Matbuot xizmati</a>
+            <a href="../page4.html">Xizmatlar</a>
+            <a href="../page5.html">Tadqiqotlar</a>
+            <a href="../page6.html">Imtiyozlar</a>
         </nav>
     </div>
     <div class="second-header">
@@ -38,27 +39,27 @@
             <a href="../index.html" class="header-menu-item">
                 <p>Bosh sahifa</p>
             </a>
-            <a href="./page1.html" class="header-menu-item">
+            <a href="../page1.html" class="header-menu-item">
                 <p>Qo'mita</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page2.html" class="header-menu-item">
+            <a href="../page2.html" class="header-menu-item">
                 <p>Qonunchilik</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page3.html" class="header-menu-item">
+            <a href="../page3.html" class="header-menu-item">
                 <p>Matbuot xizmati</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page4.html" class="header-menu-item">
+            <a href="../page4.html" class="header-menu-item">
                 <p>Xizmatlar</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page5.html" class="header-menu-item">
+            <a href="../page5.html" class="header-menu-item">
                 <p>Tadqiqotlar</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page6.html" class="header-menu-item">
+            <a href="../page6.html" class="header-menu-item">
                 <p>Imtiyozlar</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
@@ -80,21 +81,13 @@
             </div>
         </div>
     </div>
-    <div class="place1-home">
+    <div class="page-home">
         <div class="container">
-            <div class="place1-home-item">
+            <div class="page-home-item">
                 <a class="to-home" href="../index.html"><i class="fa-regular fa-left-from-line"></i></a>
                 <img src="./assets/photos/places/photo1.jpg" alt="">
-                <h1>Dahmai shohon</h1>
-                <p>~ "Dahmai Shohon" hukmdorlar maqbarasi - bu Qo‘qon hukmdorlari Norbo‘tabiy va uning avlodlari dafn
-                    etilgan majmuadir. 1822 yili, Umarxon o‘limidan keyin qurilishni uning xotini o‘z davrining mashhur
-                    shoirasi Nodirabegim davom etirgan. Qurilish 1825 yil oxirlarida tugatilgan. <br> Majmua 3 qismdan
-                    iborat: gumbazli xona peshtoqi bilan, ikki ustunli ayvonli machit va oilaviy qabristondan iborat.
-                    Dahmai Shohon majmuasi panjara bilan o‘ralgan, uning o‘rtasida qabrlar hamda Umarxonning qabri
-                    ustidagi marmar tosh joylashgan. Umarxon maqbarasi tashqi ko‘rinishi juda maftunkor qilib ishlangan.
-                    <br> Qabrning kirish eshiklari arab tilida Qur’on suralari va Umarxonning she’rlari namunalari
-                    yog‘och o‘ymakorligi bilan bezatilgan. Maqbaraning to‘g‘ri shakllari va uning past joylashgan
-                    gumbazi unga jiddiy ko‘rinish beradi. <br> Maqbaraning chiroyiga ikkita o‘ymakorlikda ishlangan eshiklar qo‘shmoqda. Bularning biri peshtoqda, ikkinchisi machitga kirishda joylashgan.
+                <h1>Somsa</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem modi repellendus vero neque ipsum consequuntur maiores inventore consectetur, aut quis quibusdam accusantium beatae pariatur magnam vel recusandae voluptatibus sapiente similique praesentium, necessitatibus eaque eveniet error delectus corporis! Facilis unde veritatis corrupti iure assumenda minus, voluptates eligendi impedit at quos, hic provident quam nobis temporibus odio quia ullam, fugiat amet quo maiores laudantium magnam fugit omnis voluptas. Incidunt debitis a eius iusto nesciunt voluptate, distinctio dolore enim expedita nostrum exercitationem ipsa corrupti ipsam esse nisi culpa nemo quibusdam veniam necessitatibus, tempora vitae? Incidunt distinctio culpa a sint itaque. Sapiente dolorem qui nisi amet nesciunt minima perspiciatis reprehenderit, itaque dolor veniam, rem labore quas aut quaerat minus reiciendis soluta voluptates culpa! Eos quis fugit minima commodi nostrum explicabo, maiores molestias consequatur? Ducimus sit at placeat, rerum nobis beatae, vero sint consequuntur mollitia labore repellendus laboriosam quis eaque. Laboriosam voluptatum ad soluta aliquam debitis. Totam quia minus ratione magnam dolor. Velit atque est molestias sed autem placeat molestiae. In quo cupiditate fuga temporibus error soluta neque quidem eaque maxime odio, reiciendis sapiente laboriosam atque illum incidunt, facere officia, deleniti repellendus voluptates. Incidunt adipisci, enim tenetur doloribus aliquid, quasi est perferendis vel optio quia ipsam, voluptatem culpa animi. Sint eaque dolorem excepturi tenetur deleniti voluptates vero, explicabo, laborum esse ipsam enim qui tempore, molestiae nesciunt facere necessitatibus eos ipsum incidunt possimus cumque non. Debitis quia laudantium quae exercitationem ipsa quo adipisci quidem dolor sed voluptatem suscipit eum aliquid tempore nostrum, quibusdam sequi, officiis repudiandae.
                 </p>
                 <h2>Qo'mita a'zolari</h2>
                 <li>Rais: Baxtiyor Umarov</li>
@@ -108,7 +101,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="footer-bottom-item">
-                    <img src="../assets/logo/Резервная_копия_fer 1.png" alt="image" />
+                    <img src="../../assets/logo/Резервная_копия_fer 1.png" alt="image" />
                     <p>
                         O‘zbekiston Respublikasi Ekologiya, atrof-muhitni muhofaza qilish
                         va iqlim o‘zgarishi vazirligi
