--- a/pages/food/food2.html
+++ b/pages/food/food2.html
@@ -8,26 +8,26 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css" />
     <link rel="icon" href="../assets/logo/icon.png">
     <link rel="stylesheet" href="./places.css">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="./page1.css">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../page1.css">
 </head>
 
 <body>
     <div class="to-top"><i class="fa-solid fa-chevron-up"></i></div>
     <div class="header">
-        <a href="../index.html" class="header-item">
-            <img src="../assets/logo/Резервная_копия_fer 1.png" alt="" />
+        <a href="../../index.html" class="header-item">
+            <img src="../../assets/logo/Резервная_копия_fer 1.png" alt="" />
             <p class="logo">O‘zbekiston Respublikasi Turizm va madaniy meros vazirligi, Farg‘ona
                 viloyati Turizm va madaniy meros bosh boshqarmasi.</p>
         </a>
         <nav class="navbar">
             <a href="../index.html">Bosh sahifa</a>
-            <a href="./page1.html">Qo'mita</a>
-            <a href="./page2.html">Qonunchilik</a>
-            <a href="./page3.html">Matbuot xizmati</a>
-            <a href="./page4.html">Xizmatlar</a>
-            <a href="./page5.html">Tadqiqotlar</a>
-            <a href="./page6.html">Imtiyozlar</a>
+            <a href="../page1.html">Qo'mita</a>
+            <a href="../page2.html">Qonunchilik</a>
+            <a href="../page3.html">Matbuot xizmati</a>
+            <a href="../page4.html">Xizmatlar</a>
+            <a href="../page5.html">Tadqiqotlar</a>
+            <a href="../page6.html">Imtiyozlar</a>
         </nav>
     </div>
     <div class="second-header">
@@ -39,27 +39,27 @@
             <a href="../index.html" class="header-menu-item">
                 <p>Bosh sahifa</p>
             </a>
-            <a href="./page1.html" class="header-menu-item">
+            <a href="../page1.html" class="header-menu-item">
                 <p>Qo'mita</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page2.html" class="header-menu-item">
+            <a href="../page2.html" class="header-menu-item">
                 <p>Qonunchilik</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page3.html" class="header-menu-item">
+            <a href="../page3.html" class="header-menu-item">
                 <p>Matbuot xizmati</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page4.html" class="header-menu-item">
+            <a href="../page4.html" class="header-menu-item">
                 <p>Xizmatlar</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page5.html" class="header-menu-item">
+            <a href="../page5.html" class="header-menu-item">
                 <p>Tadqiqotlar</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page6.html" class="header-menu-item">
+            <a href="../page6.html" class="header-menu-item">
                 <p>Imtiyozlar</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
@@ -81,27 +81,33 @@
             </div>
         </div>
     </div>
-    <div class="place-home">
+    <div class="page-home">
         <div class="container">
             <div class="page-home-item">
                 <a class="to-home" href="../index.html"><i class="fa-regular fa-left-from-line"></i></a>
-                <h1>Dahmai shohon</h1>
-                <p>~ MIYoN HАZRАT (АHАD) MАDRАSАSI — Qoʼqondagi meʼmoriy yodgorlik (18-asr). Miyon Аhad asli Peshovar
-                    (Pokiston)lik boʼlib, evarasi Аbdurahmonning hikoya qilishicha, u Аbdusamadboy degan savdogar bilan
-                    tanishib, oʼz oilasi bilan Qoʼqonga koʼchib kelgan. Аhad oʼzining oʼtkir zehni, diniy bilimlarga
-                    boyligi bilan mahalliy aholi oʼrtasida katta eʼtibor qozongan, hamda xon huzurida maslahatchi
-                    darajasiga koʼtarilgan. U Pokistondan olgan meros mulkiga shu madrasani qurdirgan. <br>
-                    Madrasa tarhiga koʼra, murakkab, 3 hovlili; 2 hovli sharq-gʼarb oʼqi boʼylab, 3-hovli esa janubdan
-                    yondashgan. Madrasaga kiriladigan asosiy yoʼl janubiy hovlining gʼarbidan peshtoq gumbazli
-                    darvozaxona orqali kiriladi. Yogʼochdan ishlangan darvozani mahalliy usta Iskandarxoʼja oʼyma
-                    naqshlar bilan bezagan. Janubiy hovli (32x26) atrofida xujralar joylashgan, uning janubiy tomonidagi
-                    masjid koʼp ustunli, tarhi toʼgʼri toʼrtburchak, tekis tomli. Madrasa hovlisining janubiy sharqida
-                    uncha katta boʼlmagan minora saqlangan. Sharqiy hovli (35x20 m) va gʼarbiy hovli (23 x 11 m)
-                    atrofida ham hujralar joylashgan. Sharqida ayvon (saqlanmagan), gʼarbida esa darsxona bor. Madrasa
-                    tomlari kulohiy, qubbali va toʼsinli usullarda qoplangan. Tashqarisi sirkor pishiq gʼishtdan
-                    ishlangan, ichi esa ganch qorishmasida suvalgan. Uning bunday hovlilar tizimiga ajratilishi
-                    oʼqitiladigan fanlarning guruhlantirilishi bilan bogʼliq deb taxmin qilinadi. Madrasada diniy
-                    bilimlardan tashqari boshqa fanlar ham oʼqitilgan. Muqimiy ham shu madrasada taʼlim olgan.
+                <img src="./assets/photos/places/photo1.jpg" alt="">
+                <h1>Kabob</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam fugit magni laborum alias
+                    consectetur explicabo illo tenetur labore reiciendis. Quidem doloribus dicta modi in beatae
+                    consequatur quod quam laboriosam magni voluptas veniam, minima repudiandae dolorum reiciendis
+                    ratione voluptatem deserunt. Iste ut quasi est magni placeat ea reiciendis et quisquam nulla,
+                    deleniti id, natus quidem hic, provident blanditiis. Molestias iusto ad dolor exercitationem
+                    consequatur modi eveniet ut ullam itaque voluptate aperiam ipsam, aliquid voluptates autem totam
+                    doloremque corporis odio! Cumque accusantium sequi, obcaecati tempora quos deserunt dicta quisquam
+                    ea, rerum nostrum repellendus laboriosam! Consequatur odit, quae et, nobis non dignissimos omnis
+                    illum temporibus laboriosam, iusto excepturi inventore assumenda in voluptas ipsa recusandae!
+                    Sapiente porro, molestias dolore, minus at quas tempore fugiat quisquam quos repellendus et! Odit,
+                    consequatur. Tenetur esse perspiciatis aliquam iusto et, molestias totam, sapiente asperiores
+                    reprehenderit recusandae eius nihil delectus. Recusandae pariatur cumque corrupti debitis. Voluptas
+                    aut sunt corrupti id fuga deserunt odit. Aliquid dolor consequatur incidunt perspiciatis sit, eum
+                    suscipit vitae fugit magni ad! Esse soluta eos doloribus, perferendis commodi mollitia voluptates
+                    voluptatum rerum repellendus sapiente ullam ut velit magni veritatis, officiis, natus harum iure
+                    quos necessitatibus voluptatibus! Quae distinctio, voluptas voluptate laboriosam nemo excepturi
+                    recusandae asperiores inventore rerum quam natus magnam, error vero esse! Et, iste, perferendis
+                    voluptates inventore minima distinctio, cum harum alias cupiditate hic deleniti aperiam culpa quae
+                    accusamus. Qui, officiis asperiores voluptatibus molestiae maxime saepe accusamus veritatis esse
+                    repellendus sed, numquam, ipsa magni! Quam sed itaque exercitationem culpa vero perferendis. Autem,
+                    voluptatibus impedit. Obcaecati?
                 </p>
                 <h2>Qo'mita a'zolari</h2>
                 <li>Rais: Baxtiyor Umarov</li>
@@ -115,7 +121,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="footer-bottom-item">
-                    <img src="../assets/logo/Резервная_копия_fer 1.png" alt="image" />
+                    <img src="../../assets/logo/Резервная_копия_fer 1.png" alt="image" />
                     <p>
                         O‘zbekiston Respublikasi Ekologiya, atrof-muhitni muhofaza qilish
                         va iqlim o‘zgarishi vazirligi
