--- a/pages/place1.html
+++ b/pages/place1.html
@@ -85,23 +85,17 @@
         <div class="container">
             <div class="page-home-item">
                 <a class="to-home" href="../index.html"><i class="fa-regular fa-left-from-line"></i></a>
+                <img src="./assets/photos/places/photo1.jpg" alt="">
                 <h1>Dahmai shohon</h1>
-                <p>~ MIYoN HАZRАT (АHАD) MАDRАSАSI — Qoʼqondagi meʼmoriy yodgorlik (18-asr). Miyon Аhad asli Peshovar
-                    (Pokiston)lik boʼlib, evarasi Аbdurahmonning hikoya qilishicha, u Аbdusamadboy degan savdogar bilan
-                    tanishib, oʼz oilasi bilan Qoʼqonga koʼchib kelgan. Аhad oʼzining oʼtkir zehni, diniy bilimlarga
-                    boyligi bilan mahalliy aholi oʼrtasida katta eʼtibor qozongan, hamda xon huzurida maslahatchi
-                    darajasiga koʼtarilgan. U Pokistondan olgan meros mulkiga shu madrasani qurdirgan. <br>
-                    Madrasa tarhiga koʼra, murakkab, 3 hovlili; 2 hovli sharq-gʼarb oʼqi boʼylab, 3-hovli esa janubdan
-                    yondashgan. Madrasaga kiriladigan asosiy yoʼl janubiy hovlining gʼarbidan peshtoq gumbazli
-                    darvozaxona orqali kiriladi. Yogʼochdan ishlangan darvozani mahalliy usta Iskandarxoʼja oʼyma
-                    naqshlar bilan bezagan. Janubiy hovli (32x26) atrofida xujralar joylashgan, uning janubiy tomonidagi
-                    masjid koʼp ustunli, tarhi toʼgʼri toʼrtburchak, tekis tomli. Madrasa hovlisining janubiy sharqida
-                    uncha katta boʼlmagan minora saqlangan. Sharqiy hovli (35x20 m) va gʼarbiy hovli (23 x 11 m)
-                    atrofida ham hujralar joylashgan. Sharqida ayvon (saqlanmagan), gʼarbida esa darsxona bor. Madrasa
-                    tomlari kulohiy, qubbali va toʼsinli usullarda qoplangan. Tashqarisi sirkor pishiq gʼishtdan
-                    ishlangan, ichi esa ganch qorishmasida suvalgan. Uning bunday hovlilar tizimiga ajratilishi
-                    oʼqitiladigan fanlarning guruhlantirilishi bilan bogʼliq deb taxmin qilinadi. Madrasada diniy
-                    bilimlardan tashqari boshqa fanlar ham oʼqitilgan. Muqimiy ham shu madrasada taʼlim olgan.
+                <p>~ "Dahmai Shohon" hukmdorlar maqbarasi - bu Qo‘qon hukmdorlari Norbo‘tabiy va uning avlodlari dafn
+                    etilgan majmuadir. 1822 yili, Umarxon o‘limidan keyin qurilishni uning xotini o‘z davrining mashhur
+                    shoirasi Nodirabegim davom etirgan. Qurilish 1825 yil oxirlarida tugatilgan. <br> Majmua 3 qismdan
+                    iborat: gumbazli xona peshtoqi bilan, ikki ustunli ayvonli machit va oilaviy qabristondan iborat.
+                    Dahmai Shohon majmuasi panjara bilan o‘ralgan, uning o‘rtasida qabrlar hamda Umarxonning qabri
+                    ustidagi marmar tosh joylashgan. Umarxon maqbarasi tashqi ko‘rinishi juda maftunkor qilib ishlangan.
+                    <br> Qabrning kirish eshiklari arab tilida Qur’on suralari va Umarxonning she’rlari namunalari
+                    yog‘och o‘ymakorligi bilan bezatilgan. Maqbaraning to‘g‘ri shakllari va uning past joylashgan
+                    gumbazi unga jiddiy ko‘rinish beradi. <br> Maqbaraning chiroyiga ikkita o‘ymakorlikda ishlangan eshiklar qo‘shmoqda. Bularning biri peshtoqda, ikkinchisi machitga kirishda joylashgan.
                 </p>
                 <h2>Qo'mita a'zolari</h2>
                 <li>Rais: Baxtiyor Umarov</li>
