--- a/pages/place3.html
+++ b/pages/place3.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="../assets/logo/icon.png">
     <link rel="stylesheet" href="./places.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./page1.css">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
         </a>
         <nav class="navbar">
             <a href="../index.html">Bosh sahifa</a>
-            <a href="./page1.html" class="active">Qo'mita</a>
+            <a href="./page1.html">Qo'mita</a>
             <a href="./page2.html">Qonunchilik</a>
             <a href="./page3.html">Matbuot xizmati</a>
             <a href="./page4.html">Xizmatlar</a>
@@ -80,9 +81,9 @@
             </div>
         </div>
     </div>
-    <div class="place1-home">
+    <div class="place-home">
         <div class="container">
-            <div class="place1-home-item">
+            <div class="page-home-item">
                 <a class="to-home" href="../index.html"><i class="fa-regular fa-left-from-line"></i></a>
                 <h1>Xudoyorxon o'rdasi</h1>
                 <p>~ Xudoyorxon saroyi — 1863-1873 yillarda barpo etilgan bo‘lib, Xudoyorxon Qo‘qon xoni o‘ziga
