--- a/pages/place4.html
+++ b/pages/place4.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="../assets/logo/icon.png">
     <link rel="stylesheet" href="./places.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./page1.css">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
         </a>
         <nav class="navbar">
             <a href="../index.html">Bosh sahifa</a>
-            <a href="./page1.html" class="active">Qo'mita</a>
+            <a href="./page1.html">Qo'mita</a>
             <a href="./page2.html">Qonunchilik</a>
             <a href="./page3.html">Matbuot xizmati</a>
             <a href="./page4.html">Xizmatlar</a>
@@ -80,14 +81,15 @@
             </div>
         </div>
     </div>
-    <div class="place1-home">
+    <div class="place-home">
         <div class="container">
-            <div class="place1-home-item">
+            <div class="page-home-item">
                 <a class="to-home" href="../index.html"><i class="fa-regular fa-left-from-line"></i></a>
                 <h1>Kamol qozi madrasasi</h1>
                 <p>~ Kamol qozi madrasasi - Qoʻqondagi meʼmoriy yodgorlik, 19-asrga tegishli. Kamol qozi madrasasining
                     binosi darsxona, ayvonli masjid, hovli va kichik hujralardan iborat. Darvozaxona serhasham boʻlib,
-                    Xudoyorxon oʻrdasida boʻlgani kabi bu binoda ham faqat kirish qismi (sirti) zeb berib ishlangan. <br>
+                    Xudoyorxon oʻrdasida boʻlgani kabi bu binoda ham faqat kirish qismi (sirti) zeb berib ishlangan.
+                    <br>
 
                     Peshtoq tepasi rangbarang naqshlar bilan qoplangan boʻlib, handasiy shakllar arabiy bitiklar bilan
                     uygʻunlashib ketgan. Peshtoqining ikki yonidagi ustun goʻshalar yuqorisi bezakli kafasa bilan
@@ -96,7 +98,7 @@
                     qurilgan. Masjid 4 ustunli, sharq tomoni ochiq, toʻsin tashlab qurilgan ayvoni bor. Uning ichki
                     tomoni ganch bilan ishlangan. Sirti suvoqsiz. Kamol qozi madrasasi meʼmorligida qoʻqonlik xalq
                     ustalarining anʼanalari oʻz ifodasini topgan. Madrasa taʼmir qilinib, undan mehmonxona sifatida
-                    foydalanilmoqda.  <br>
+                    foydalanilmoqda. <br>
                 </p>
                 <h2>Qo'mita a'zolari</h2>
                 <li>Rais: Baxtiyor Umarov</li>
