--- a/pages/food/food4.html
+++ b/pages/food/food4.html
@@ -8,26 +8,26 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css" />
     <link rel="icon" href="../assets/logo/icon.png">
     <link rel="stylesheet" href="./places.css">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="./page1.css">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../page1.css">
 </head>
 
 <body>
     <div class="to-top"><i class="fa-solid fa-chevron-up"></i></div>
     <div class="header">
-        <a href="../index.html" class="header-item">
-            <img src="../assets/logo/Резервная_копия_fer 1.png" alt="" />
+        <a href="../../index.html" class="header-item">
+            <img src="../../assets/logo/Резервная_копия_fer 1.png" alt="" />
             <p class="logo">O‘zbekiston Respublikasi Turizm va madaniy meros vazirligi, Farg‘ona
                 viloyati Turizm va madaniy meros bosh boshqarmasi.</p>
         </a>
         <nav class="navbar">
             <a href="../index.html">Bosh sahifa</a>
-            <a href="./page1.html">Qo'mita</a>
-            <a href="./page2.html">Qonunchilik</a>
-            <a href="./page3.html">Matbuot xizmati</a>
-            <a href="./page4.html">Xizmatlar</a>
-            <a href="./page5.html">Tadqiqotlar</a>
-            <a href="./page6.html">Imtiyozlar</a>
+            <a href="../page1.html">Qo'mita</a>
+            <a href="../page2.html">Qonunchilik</a>
+            <a href="../page3.html">Matbuot xizmati</a>
+            <a href="../page4.html">Xizmatlar</a>
+            <a href="../page5.html">Tadqiqotlar</a>
+            <a href="../page6.html">Imtiyozlar</a>
         </nav>
     </div>
     <div class="second-header">
@@ -39,27 +39,27 @@
             <a href="../index.html" class="header-menu-item">
                 <p>Bosh sahifa</p>
             </a>
-            <a href="./page1.html" class="header-menu-item">
+            <a href="../page1.html" class="header-menu-item">
                 <p>Qo'mita</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page2.html" class="header-menu-item">
+            <a href="../page2.html" class="header-menu-item">
                 <p>Qonunchilik</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page3.html" class="header-menu-item">
+            <a href="../page3.html" class="header-menu-item">
                 <p>Matbuot xizmati</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page4.html" class="header-menu-item">
+            <a href="../page4.html" class="header-menu-item">
                 <p>Xizmatlar</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page5.html" class="header-menu-item">
+            <a href="../page5.html" class="header-menu-item">
                 <p>Tadqiqotlar</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page6.html" class="header-menu-item">
+            <a href="../page6.html" class="header-menu-item">
                 <p>Imtiyozlar</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
@@ -81,27 +81,33 @@
             </div>
         </div>
     </div>
-    <div class="place-home">
+    <div class="page-home">
         <div class="container">
             <div class="page-home-item">
                 <a class="to-home" href="../index.html"><i class="fa-regular fa-left-from-line"></i></a>
-                <h1>Dahmai shohon</h1>
-                <p>~ MIYoN HАZRАT (АHАD) MАDRАSАSI — Qoʼqondagi meʼmoriy yodgorlik (18-asr). Miyon Аhad asli Peshovar
-                    (Pokiston)lik boʼlib, evarasi Аbdurahmonning hikoya qilishicha, u Аbdusamadboy degan savdogar bilan
-                    tanishib, oʼz oilasi bilan Qoʼqonga koʼchib kelgan. Аhad oʼzining oʼtkir zehni, diniy bilimlarga
-                    boyligi bilan mahalliy aholi oʼrtasida katta eʼtibor qozongan, hamda xon huzurida maslahatchi
-                    darajasiga koʼtarilgan. U Pokistondan olgan meros mulkiga shu madrasani qurdirgan. <br>
-                    Madrasa tarhiga koʼra, murakkab, 3 hovlili; 2 hovli sharq-gʼarb oʼqi boʼylab, 3-hovli esa janubdan
-                    yondashgan. Madrasaga kiriladigan asosiy yoʼl janubiy hovlining gʼarbidan peshtoq gumbazli
-                    darvozaxona orqali kiriladi. Yogʼochdan ishlangan darvozani mahalliy usta Iskandarxoʼja oʼyma
-                    naqshlar bilan bezagan. Janubiy hovli (32x26) atrofida xujralar joylashgan, uning janubiy tomonidagi
-                    masjid koʼp ustunli, tarhi toʼgʼri toʼrtburchak, tekis tomli. Madrasa hovlisining janubiy sharqida
-                    uncha katta boʼlmagan minora saqlangan. Sharqiy hovli (35x20 m) va gʼarbiy hovli (23 x 11 m)
-                    atrofida ham hujralar joylashgan. Sharqida ayvon (saqlanmagan), gʼarbida esa darsxona bor. Madrasa
-                    tomlari kulohiy, qubbali va toʼsinli usullarda qoplangan. Tashqarisi sirkor pishiq gʼishtdan
-                    ishlangan, ichi esa ganch qorishmasida suvalgan. Uning bunday hovlilar tizimiga ajratilishi
-                    oʼqitiladigan fanlarning guruhlantirilishi bilan bogʼliq deb taxmin qilinadi. Madrasada diniy
-                    bilimlardan tashqari boshqa fanlar ham oʼqitilgan. Muqimiy ham shu madrasada taʼlim olgan.
+                <img src="./assets/photos/places/photo1.jpg" alt="">
+                <h1>Chuchvara</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos sunt accusantium nemo labore eveniet
+                    similique autem laboriosam dignissimos reprehenderit, neque sint corporis, distinctio exercitationem
+                    illum laborum nulla tempora eligendi quod dolore mollitia nesciunt minus? Mollitia reiciendis quam
+                    voluptate tempore? Nisi vitae natus accusantium, fuga excepturi blanditiis consequuntur corrupti eos
+                    tempore quis cumque, necessitatibus vero? Quidem, itaque quis! Expedita, est voluptas sit quisquam
+                    magni ut, fugit assumenda veniam, iure reiciendis dicta tenetur dolor veritatis ipsum inventore
+                    corrupti atque recusandae aspernatur sequi. Autem odit iusto error atque, corrupti voluptates
+                    deserunt harum quaerat reprehenderit tempora itaque magni hic eum vero omnis consequatur, labore
+                    magnam, dolore sed blanditiis culpa dolorem. Eius, ea sed dicta architecto ipsa sint, eum cupiditate
+                    corporis aperiam facilis expedita ullam repellat numquam animi tempore natus dolor accusamus beatae
+                    necessitatibus maiores similique repellendus. Tempore minus repellat atque voluptatem debitis
+                    cupiditate sunt in saepe asperiores hic, soluta perspiciatis fugit numquam blanditiis distinctio
+                    sapiente officia voluptatum commodi tempora, vel mollitia explicabo fugiat animi. Sapiente quidem
+                    odio magnam! Non odio iusto consequuntur, maiores possimus quis enim facilis necessitatibus eaque
+                    quasi amet error ipsam est. Impedit dolor ipsa pariatur, consectetur optio aspernatur ipsam
+                    repellendus eligendi sit dolore est obcaecati odio! Voluptatibus obcaecati, velit nulla deleniti
+                    hic, ab illo ratione animi quam dolor neque illum. Reprehenderit sit molestiae consectetur quaerat
+                    fugiat aut dolore deserunt? Molestiae sint laudantium labore doloribus maiores voluptates
+                    reprehenderit dolores! Dicta doloribus suscipit quidem placeat cupiditate accusamus blanditiis hic
+                    perferendis exercitationem cumque ipsa eveniet facere facilis, expedita commodi quo deserunt sunt
+                    perspiciatis officia.
                 </p>
                 <h2>Qo'mita a'zolari</h2>
                 <li>Rais: Baxtiyor Umarov</li>
@@ -115,7 +121,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="footer-bottom-item">
-                    <img src="../assets/logo/Резервная_копия_fer 1.png" alt="image" />
+                    <img src="../../assets/logo/Резервная_копия_fer 1.png" alt="image" />
                     <p>
                         O‘zbekiston Respublikasi Ekologiya, atrof-muhitni muhofaza qilish
                         va iqlim o‘zgarishi vazirligi
