--- a/pages/food/food5.html
+++ b/pages/food/food5.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css" />
     <link rel="icon" href="../assets/logo/icon.png">
     <link rel="stylesheet" href="./places.css">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="./page1.css">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../page1.css">
 </head>
 
 <body>
     <div class="to-top"><i class="fa-solid fa-chevron-up"></i></div>
     <div class="header">
         <a href="../index.html" class="header-item">
-            <img src="../assets/logo/Резервная_копия_fer 1.png" alt="" />
+            <img src="../../assets/logo/Резервная_копия_fer 1.png" alt="" />
             <p class="logo">O‘zbekiston Respublikasi Turizm va madaniy meros vazirligi, Farg‘ona
                 viloyati Turizm va madaniy meros bosh boshqarmasi.</p>
         </a>
@@ -81,27 +81,32 @@
             </div>
         </div>
     </div>
-    <div class="place-home">
+    <div class="page-home">
         <div class="container">
             <div class="page-home-item">
                 <a class="to-home" href="../index.html"><i class="fa-regular fa-left-from-line"></i></a>
-                <h1>Dahmai shohon</h1>
-                <p>~ MIYoN HАZRАT (АHАD) MАDRАSАSI — Qoʼqondagi meʼmoriy yodgorlik (18-asr). Miyon Аhad asli Peshovar
-                    (Pokiston)lik boʼlib, evarasi Аbdurahmonning hikoya qilishicha, u Аbdusamadboy degan savdogar bilan
-                    tanishib, oʼz oilasi bilan Qoʼqonga koʼchib kelgan. Аhad oʼzining oʼtkir zehni, diniy bilimlarga
-                    boyligi bilan mahalliy aholi oʼrtasida katta eʼtibor qozongan, hamda xon huzurida maslahatchi
-                    darajasiga koʼtarilgan. U Pokistondan olgan meros mulkiga shu madrasani qurdirgan. <br>
-                    Madrasa tarhiga koʼra, murakkab, 3 hovlili; 2 hovli sharq-gʼarb oʼqi boʼylab, 3-hovli esa janubdan
-                    yondashgan. Madrasaga kiriladigan asosiy yoʼl janubiy hovlining gʼarbidan peshtoq gumbazli
-                    darvozaxona orqali kiriladi. Yogʼochdan ishlangan darvozani mahalliy usta Iskandarxoʼja oʼyma
-                    naqshlar bilan bezagan. Janubiy hovli (32x26) atrofida xujralar joylashgan, uning janubiy tomonidagi
-                    masjid koʼp ustunli, tarhi toʼgʼri toʼrtburchak, tekis tomli. Madrasa hovlisining janubiy sharqida
-                    uncha katta boʼlmagan minora saqlangan. Sharqiy hovli (35x20 m) va gʼarbiy hovli (23 x 11 m)
-                    atrofida ham hujralar joylashgan. Sharqida ayvon (saqlanmagan), gʼarbida esa darsxona bor. Madrasa
-                    tomlari kulohiy, qubbali va toʼsinli usullarda qoplangan. Tashqarisi sirkor pishiq gʼishtdan
-                    ishlangan, ichi esa ganch qorishmasida suvalgan. Uning bunday hovlilar tizimiga ajratilishi
-                    oʼqitiladigan fanlarning guruhlantirilishi bilan bogʼliq deb taxmin qilinadi. Madrasada diniy
-                    bilimlardan tashqari boshqa fanlar ham oʼqitilgan. Muqimiy ham shu madrasada taʼlim olgan.
+                <img src="./assets/photos/places/photo1.jpg" alt="">
+                <h1>Palov</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque iure excepturi laboriosam corporis
+                    pariatur. Pariatur quos nulla aliquid nemo temporibus ut aut laborum culpa quibusdam atque qui, quam
+                    ipsum omnis quod praesentium dolorem, corporis rem esse minus sed! Inventore eligendi magnam eaque
+                    earum corporis voluptatem aperiam unde consequuntur ea, aut reprehenderit veritatis accusantium
+                    placeat quia reiciendis laborum ipsa adipisci. Deserunt possimus itaque reprehenderit natus omnis
+                    illum ipsum architecto id laboriosam perspiciatis, est dignissimos quasi numquam ducimus laudantium
+                    quo doloribus sapiente nemo optio? Necessitatibus, inventore! Sit libero quae tempora commodi totam
+                    ipsum repellendus animi cum autem numquam esse nulla, beatae ab modi recusandae dicta quaerat
+                    aperiam molestiae? Aspernatur error aperiam sed asperiores exercitationem non repellendus earum,
+                    suscipit temporibus illum at quis dolorem consequuntur ipsa soluta corporis eaque architecto impedit
+                    quasi ut eius, sint harum atque iusto? Asperiores incidunt autem explicabo officiis. Mollitia hic
+                    aspernatur officia aliquid? Pariatur, in! Recusandae, qui! Enim sapiente velit ex, assumenda
+                    pariatur architecto porro quaerat sed illum voluptates, rem vitae, provident eligendi dignissimos et
+                    quam. Harum incidunt ipsam fugit illum labore cum repudiandae nostrum tenetur mollitia enim, rem
+                    repellat quidem. Illo nam numquam in deleniti unde cumque sapiente quidem hic libero similique,
+                    earum, quasi velit eos quisquam deserunt vero cum iure alias iusto sint maiores voluptatem. Culpa
+                    facilis assumenda odit suscipit tenetur. Cupiditate asperiores porro laboriosam quidem incidunt
+                    nostrum enim ullam qui exercitationem, voluptatem numquam minima consectetur debitis consequuntur
+                    repudiandae, provident quo maiores illum soluta voluptates. Eligendi, fugit repellat. Earum,
+                    aspernatur. Perferendis est excepturi possimus placeat nemo!
                 </p>
                 <h2>Qo'mita a'zolari</h2>
                 <li>Rais: Baxtiyor Umarov</li>
@@ -115,7 +120,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="footer-bottom-item">
-                    <img src="../assets/logo/Резервная_копия_fer 1.png" alt="image" />
+                    <img src="../../assets/logo/Резервная_копия_fer 1.png" alt="image" />
                     <p>
                         O‘zbekiston Respublikasi Ekologiya, atrof-muhitni muhofaza qilish
                         va iqlim o‘zgarishi vazirligi
