--- a/pages/food/food6.html
+++ b/pages/food/food6.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css" />
     <link rel="icon" href="../assets/logo/icon.png">
     <link rel="stylesheet" href="./places.css">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="./page1.css">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../page1.css">
 </head>
 
 <body>
     <div class="to-top"><i class="fa-solid fa-chevron-up"></i></div>
     <div class="header">
         <a href="../index.html" class="header-item">
-            <img src="../assets/logo/Резервная_копия_fer 1.png" alt="" />
+            <img src="../../assets/logo/Резервная_копия_fer 1.png" alt="" />
             <p class="logo">O‘zbekiston Respublikasi Turizm va madaniy meros vazirligi, Farg‘ona
                 viloyati Turizm va madaniy meros bosh boshqarmasi.</p>
         </a>
@@ -81,27 +81,31 @@
             </div>
         </div>
     </div>
-    <div class="place-home">
+    <div class="page-home">
         <div class="container">
             <div class="page-home-item">
                 <a class="to-home" href="../index.html"><i class="fa-regular fa-left-from-line"></i></a>
-                <h1>Dahmai shohon</h1>
-                <p>~ MIYoN HАZRАT (АHАD) MАDRАSАSI — Qoʼqondagi meʼmoriy yodgorlik (18-asr). Miyon Аhad asli Peshovar
-                    (Pokiston)lik boʼlib, evarasi Аbdurahmonning hikoya qilishicha, u Аbdusamadboy degan savdogar bilan
-                    tanishib, oʼz oilasi bilan Qoʼqonga koʼchib kelgan. Аhad oʼzining oʼtkir zehni, diniy bilimlarga
-                    boyligi bilan mahalliy aholi oʼrtasida katta eʼtibor qozongan, hamda xon huzurida maslahatchi
-                    darajasiga koʼtarilgan. U Pokistondan olgan meros mulkiga shu madrasani qurdirgan. <br>
-                    Madrasa tarhiga koʼra, murakkab, 3 hovlili; 2 hovli sharq-gʼarb oʼqi boʼylab, 3-hovli esa janubdan
-                    yondashgan. Madrasaga kiriladigan asosiy yoʼl janubiy hovlining gʼarbidan peshtoq gumbazli
-                    darvozaxona orqali kiriladi. Yogʼochdan ishlangan darvozani mahalliy usta Iskandarxoʼja oʼyma
-                    naqshlar bilan bezagan. Janubiy hovli (32x26) atrofida xujralar joylashgan, uning janubiy tomonidagi
-                    masjid koʼp ustunli, tarhi toʼgʼri toʼrtburchak, tekis tomli. Madrasa hovlisining janubiy sharqida
-                    uncha katta boʼlmagan minora saqlangan. Sharqiy hovli (35x20 m) va gʼarbiy hovli (23 x 11 m)
-                    atrofida ham hujralar joylashgan. Sharqida ayvon (saqlanmagan), gʼarbida esa darsxona bor. Madrasa
-                    tomlari kulohiy, qubbali va toʼsinli usullarda qoplangan. Tashqarisi sirkor pishiq gʼishtdan
-                    ishlangan, ichi esa ganch qorishmasida suvalgan. Uning bunday hovlilar tizimiga ajratilishi
-                    oʼqitiladigan fanlarning guruhlantirilishi bilan bogʼliq deb taxmin qilinadi. Madrasada diniy
-                    bilimlardan tashqari boshqa fanlar ham oʼqitilgan. Muqimiy ham shu madrasada taʼlim olgan.
+                <img src="./assets/photos/places/photo1.jpg" alt="">
+                <h1>Mastava</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia animi excepturi fugit eos voluptas,
+                    nobis unde corrupti enim distinctio molestias, dolores reiciendis asperiores repudiandae ipsum
+                    officiis aut nemo est ea illo reprehenderit numquam dolorem cumque! Architecto nulla pariatur
+                    quaerat sapiente cum ducimus? Officiis culpa accusamus recusandae sunt aut laudantium quasi esse! In
+                    ea laboriosam cum iusto quas, rerum nesciunt facere accusantium amet tempora, facilis est dolorum
+                    veniam cumque, sint ipsa temporibus nobis minus beatae porro quos velit voluptas dignissimos rem!
+                    Repudiandae neque, sunt, distinctio nulla adipisci autem at rem temporibus, cupiditate modi officia
+                    ipsa eaque itaque. Non culpa explicabo neque sint voluptates alias quae quia itaque repellendus, est
+                    officiis illum labore laudantium tempora eius porro aliquam voluptate nesciunt reprehenderit
+                    facilis. Tempora error obcaecati consectetur earum eaque illo debitis culpa aliquam modi sint
+                    voluptate repudiandae perspiciatis omnis sed nostrum fugit asperiores tempore cum, nesciunt eligendi
+                    minus quas in veritatis similique! Mollitia provident veritatis rem dolores, eaque harum assumenda
+                    sit vero quas facilis, alias ullam explicabo officiis at. Error odit eos at maiores iure nulla
+                    eligendi hic quam in commodi doloribus numquam modi atque nihil saepe ducimus, magni harum rem rerum
+                    doloremque labore quidem? Temporibus facilis obcaecati corporis distinctio accusamus in eius minima
+                    ullam, consequatur accusantium totam architecto dolorem commodi, fugit, adipisci corrupti fuga?
+                    Reiciendis labore doloremque sunt quisquam aliquid! Aperiam eligendi, molestias a impedit itaque
+                    ipsa placeat reprehenderit quod hic ea non necessitatibus voluptates nobis earum provident, facere
+                    suscipit omnis blanditiis, natus animi soluta id. Labore tempore accusamus vel culpa. Aliquid!
                 </p>
                 <h2>Qo'mita a'zolari</h2>
                 <li>Rais: Baxtiyor Umarov</li>
@@ -115,7 +119,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="footer-bottom-item">
-                    <img src="../assets/logo/Резервная_копия_fer 1.png" alt="image" />
+                    <img src="../../assets/logo/Резервная_копия_fer 1.png" alt="image" />
                     <p>
                         O‘zbekiston Respublikasi Ekologiya, atrof-muhitni muhofaza qilish
                         va iqlim o‘zgarishi vazirligi
