--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             versiyalari ham bor. Qadimiy Xitoy qoʻlyozmalarida Qoʻqon nomi
             „Guyshan“, „Xoʻxan“ tarzida ifodalangan.
           </p>
-          <button class="welcome-section-btn">Batafsil</button>
+          <a href="./pages/news/news.html"><button class="welcome-section-btn">Batafsil</button></a>
         </div>
         <div class="mapdiv">
           <svg class="map" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
